improve tests